Updated and fixed the alignment of the customer about

--- a/django_project/static/css/Customer.css
+++ b/django_project/static/css/Customer.css
@@ -190,7 +190,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     gap: 10px;
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
